assets/css/styles.css
body {
    background-color: white;
    color: black;;
    float:right;
    width: 80%;
    font-family: 'Poppins', sans-serif;
}

i.skill {
    font-size: 90px;
    padding: 12px;
}

.headertext{
    color: #25986f;
    font-weight: 550;
}

.jumbotron {
background-image: url("../images/coffeecode.jpg");
background-size: cover;
min-height: 864px;
text-align: center;
padding-top: 300px;
margin-bottom: 0;
}

#name-jumbotron{
    color: white;
}

#typing{
    color: white;
    text-align: center;
    padding-top: 20px;
    font-size: 30px;
}

.wrapper {
    display: flex;
    width: 100%;
    overflow: auto;
}

#sidebar {
    width: 20%;
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    z-index: 999;
    background: lightgray;
    color: darkslategray;
    transition: all 0.3s;
    font-size: 1.2rem;
    padding-top: 200px;
    text-align: center;
    float: left;
}


#display-pic {
    height: 14rem;;
    width: 14rem;
    border-radius: 50%;
    margin-top: 20px;
    padding-bottom: 10px;
}

li {
    padding: 10px;
}

section{
    width: 100%;
    padding: 0px 60px;
    box-sizing: border-box;
    position: relative;
}

.background {
    background-color:whitesmoke;
}

.contact-me{
    background-color: whitesmoke;
}
.spacer {
    padding: 20px 0px;
}
/* Side Bar Links Text Style */
a:visited { text-decoration: none; color:black; }
a:hover { text-decoration: underline; color:black; }
a:focus { text-decoration: none; color:black; }
a:hover, a:active { text-decoration: underline; color:black }

.fa-span{
    padding-right: 10px;
}

.dark-section{
    background-color: whitesmoke;
}

.skills-container2{
    margin: auto;
    width: 90%;
}

.footer {
    background-color: lightgray;
    text-align: center;
    padding: 8px;
}


/*--project pics with overlay--*/
.project-pic {
    height: 100%;
    width: 100%;
}

.container-overlay {
    position: relative;
    width: 50%;
    height: 14rem;
  }
  
.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    transition: .5s ease;
    background-color: #008CBA;
  }

  .container-overlay:hover .overlay {
    opacity: 0.9;
  }

  .overlay-text {
    color: white;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }

  .overlay-link{
    color: white;
    font-size: 16px;
    position: absolute;
    top: 70%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
  }

/*---end project pics with overlay--*/

